# cccl

./: new.ncu-rep  old.ncu-rep  physics_events.py  s5_cub.json  s5_operator.json  s5_operator_segmented.json  s5_operator_segmented_actual.json  s5_pytorch.json
awkward/: _segment_algorithms.py  benchmark.py  helpers.py  playground.py
c/parallel/: CMakeLists.txt
c/parallel/src/: for.cu  histogram.cu  merge_sort.cu  nondeterministic_reduce.cu  radix_sort.cu  reduce.cu  scan.cu  segmented_reduce.cu  select_if.cu  transform.cu  unique_by_key.cu
c/parallel/test/: algorithm_execution.h  test_histogram.cpp  test_nondeterministic_reduce.cpp  test_reduce.cpp  test_scan.cpp  test_segmented_reduce.cpp  test_select_if.cpp  test_util.h
cmake/: CCCLBuildCompilerTargets.cmake
cub/benchmarks/: CMakeLists.txt
cub/benchmarks/bench/awkward/: bench_util.cuh  end_to_end.cu  filter_flat_array.cuh  filter_out_segments.cu  filter_out_segments_copy_if.cuh  filter_out_segments_copy_if_zipped.cuh  filter_out_segments_fancy_iterator.cuh  filter_out_segments_fancy_iterator_direct_offsets_zipped.cuh  filter_out_segments_fancy_iterator_zipped.cuh  filter_out_segments_rle_scan.cuh  filter_out_segments_rle_scan_zipped.cuh  filter_segmented_array.cuh  filter_segmented_array_lower_bound_only_zipped.cuh  filter_segmented_array_three_way_partition_zipped.cuh  filter_segmented_array_upper_bound.cuh  filter_segmented_array_upper_bound_fancy_iterator_zipped.cuh  filter_segmented_array_upper_bound_zipped.cuh  filter_segmented_array_zipped.cuh  invariant_mass.cu  invariant_mass_segmented_reduce.cuh  invariant_mass_transform.cuh  segmented_filter.cu
cub/benchmarks/bench/awkward/for_nan/: argmax_segmented_reduce.cu  argmax_unary_transform.cu  invariant_mass.cu  sum.cu
cub/benchmarks/bench/block_load/: vectorized_unpack.cu
cub/benchmarks/bench/hierarchical/: bad_cub_rmsnorm_segmented_reduce.cu  bad_cub_rmsnorm_transform.cu  cub_rmsnorm.cu  flashinfer_fused_add_rmsnorm.cu  flashinfer_rmsnorm.cu  fused_add_rmsnorm.cu  hierarchical_rmsnorm.cu  rmsnorm.cu  trtllm_fused_add_rmsnorm.cu
cub/benchmarks/bench/hierarchical/cudf/: bad_cub_valid_if.cu  cub_copy_if_else.cu  cub_valid_if.cu  cudf_copy_if_else.cu  cudf_kernel_only_copy_if_else.cu  cudf_valid_if.cu  custom_copy_if_else.cu  custom_valid_if.cu  device_transform_copy_if_else.cu  device_transform_copy_if_else_conditional_load.cu  hierarchical_copy_if_else.cu  hierarchical_valid_if.cu  hierarchical_valid_if_ballot.cu
cub/benchmarks/bench/hierarchical/rmsnorm/: bad_cub_rmsnorm_transform.cu  cub_rmsnorm.cu  cutile_rmsnorm.py  cutile_rmsnorm_autotune.py  device_transform_rmsnorm_proxy.cu  flashinfer_cutedsl_rmsnorm.py  flashinfer_fused_add_rmsnorm.cu  flashinfer_rmsnorm.cu  hierarchical_rmsnorm.cu  python_benchmarks.md  pytorch_rmsnorm.py  rmsnorm_check.cuh  rmsnorm_common.py
cub/benchmarks/bench/hierarchical/rmsnorm/fused_add/: flashinfer_fused_add_rmsnorm.cu  fused_add_rmsnorm.cu  rms_norm_trtllm_reduce_fusion.cuh  trtllm_fused_add_rmsnorm.cu
cub/benchmarks/bench/histogram/: even.cu  even_curand.cu  even_pytorch.cu  generate_data.py  npy.hpp
cub/benchmarks/bench/nondeterministic_reduce/: base.cuh  sum.cu
cub/benchmarks/bench/parrot/: differ_where.cu  differ_where_select.cu  og_benchmark.cu  parrot_differ_where.cu
cub/benchmarks/bench/scan/exclusive/: README_VERIFICATION.md  base.cuh  generate_and_check_data.py  s5_operator.cu  s5_operator.cuh  s5_operator.py  s5_operator_cuda_compute.py  s5_operator_iterator_style.cu  s5_operator_segmented.cu  s5_operator_segmented.cuh  s5_operator_segmented_actual.cu  s5_operator_segmented_actual.cuh  sum.cu  verify_s5.cu
cub/benchmarks/bench/scan/exclusive/s5_cuda_compute/: README.md  __init__.py  attempt1_transform_iterator.py  attempt2_pointer_arithmetic.py  attempt3_pointer_cast.py
cub/benchmarks/bench/scan/exclusive/verify_s5/: A_in.npy  A_out_cpp.npy  A_out_python.npy  Bu_in.npy  Bu_out_cpp.npy  Bu_out_python.npy  Makefile.verify  VERIFICATION_README.md  compare_outputs.py  generate_test_data.py  quick_verify.sh  run_verification.sh  s5_verify.cu  s5_verify.py
cub/benchmarks/bench/select/: flagged.cu  unique_by_key.cu
cub/benchmarks/bench/transform/: bandwidth_saturation.cu  common.h  common_vectorized.h  grayscale.cu  grayscale_vectorized.cu  vector_add.cu  vectoradd.cu  vectorized.cu
cub/benchmarks/common/: cudf_random_input.cu  cudf_random_input.cuh  generate_input.cu  generate_input.hpp  random_distribution_factory.cuh
cub/cub/: util_arch.cuh  util_device.cuh
cub/cub/agent/: agent_histogram.cuh  agent_nondeterministic_reduce.cuh  agent_select_if.cuh  agent_unique_by_key.cuh
cub/cub/block/: block_load_to_shared.cuh  block_nondeterministic_reduce.cuh
cub/cub/detail/: ptx-json-parser.h
cub/cub/device/: device_hierarchical_segmented_reduce.cuh  device_hierarchical_transform.cuh
cub/test/: catch2_test_device_transform.cu  catch2_test_nvrtc.cu
docs/: nv-versions.json  objects.inv
docs/unstable/: .buildinfo  404_helper.html  cpp.html  genindex.html  index.html  objects.inv  pagelist.txt  py-modindex.html  search.html
docs/unstable/cccl/: 3.0_migration_guide.html  config_macros.html  contributing.html  determinism.html  license.html  tma.html
docs/unstable/cub/: api.html  benchmarking.html  determinism.html  developer_overview.html  index.html  policy_selectors.html  releases.html  test_overview.html  tuning.html  tuning_infra.html
docs/unstable/cudax/: container.html  graph.html  index.html  memory_resource.html  places.html  stf.html
docs/unstable/libcudacxx/: extended_api.html  index.html  ptx_api.html  releases.html  runtime.html  setup.html  standard_api.html  tile.html
docs/unstable/maintainers/: backport_process.html  branching_strategy.html  coderabbit.html  index.html
docs/unstable/python/: api_reference.html  compute.html  compute_api.html  coop.html  coop_api.html  index.html  resources.html  setup.html
docs/unstable/thrust/: api.html  developer_overview.html  index.html  releases.html  (+1 more)
parrot_reproducer/: bench_differ_where.py
python/cuda_cccl/: pyproject.toml
(+1650 files in other folders)
